--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@import "~ngx-toastr/toastr";
+
+:root {
+  --primary-color: rgb(2, 2, 82);
+  --secondary-color: #5a92d3;
+  --body-text-color: #596392;
+  --navbar-footer-color: #0e70d1;
+  --footer-color-bg: #ffff;
+}
+body {
+  font-size: 12px;
+  color: var(--body-text-color);
+  display: contents;
+  font-family: "Roboto", sans-serif;
+}
+
+.site-logo {
+  padding: 5px 20px;
+  border-radius: 20px;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+}
+.navlink {
+  color: var(--primary-color);
+}
+.shadow-effect {
+  border: none;
+  box-shadow: 0 0 33px -10px rgba(71, 114, 254, 0.3);
+}
+
+.bg-theme {
+  background-color: var(--primary-color);
+}
+
+.bg-secondary-theme {
+  background-color: var(--secondary-color);
+}
+.btn-theme {
+  height: 58px;
+  border: none;
+  font-size: 13px;
+  background-color: var(--primary-color);
+}
+input [type="text"],
+input[type="email"] {
+  height: 60px;
+  padding-left: 20px;
+  font-size: 13px;
+  width: 100%;
+}
+.text-theme-primary {
+  color: var(--primary-color);
+}
