--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 bg-secondary-theme p-5 shadow-effect">
-      <h3 class="text-center text-theme-primary">New Categories</h3>
-      <p class="text-center text-white mb-5">Add new category!</p>
-      <form action="" class="form-inline text-center" #categoryForm="ngForm" (click)="onSubmit(categoryForm)">
+      <h3 class="text-center text-theme-primary">Categories Controller</h3>
+      <p class="text-center text-white mb-5">{{formStatus}} category!</p>
+      <form action="" class="form-inline text-center" #categoryForm="ngForm">
         <div class="col-md-10">
           <input
             type="text"
             name="categories"
             class="form-control shadow-effect"
             placeholder="Add new category"
-            ngModel
+            [(ngModel)] = 'formCategory'
             #newCategory = 'ngModel'
             required
             [ngClass]="{'is-invalid': newCategory.touched && newCategory.invalid }"
@@ -20,9 +20,37 @@
           </div>
         </div>
         <div class="col-md-2">
-          <button class="btn btn-block btn-info btn-theme" [disabled]="categoryForm.invalid" >Add Category</button>
+          <button class="btn btn-block btn-info btn-theme" [disabled]="categoryForm.invalid" (click)="onSubmit(categoryForm)">{{formStatus}} Category</button>
         </div>
       </form>
     </div>
+  </div>
+  <div class="row mt-5 mb-5">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="card shadow-effect">
+        <div class="card-body">
+          <table class="table row-border hover">
+            <thead>
+              <tr>
+                <th>No</th>
+                <th>Category</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let category of categoryArray; let i = index">
+                <td>{{i+1}}</td>
+                <td>{{category.data.categories}}</td>
+                <td><button class="btn btn-sm btn-warning" (click)="onEdit(category.data.categories, category.id)">Edit</button>
+                    <button class="btn btn-sm btn-danger ml-2" (click)="onDelete(category.id)">Delete</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
   </div>
 </div>
