--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,8 @@ body {
   background-color: var(--primary-color);
 }
 input [type="text"],
-input[type="email"] {
+input[type="email"], 
+input[type="password"] {
   height: 60px;
   padding-left: 20px;
   font-size: 13px;
