--- a/src/app/body/header/header.component.html
+++ b/src/app/body/header/header.component.html
@@ -2,5 +2,9 @@
     <div class="container justify-content-center">
         <a href="#" class="site-logo">PROGRAMING-BLOG-CMS</a>
     </div>
+    <div class="container justify-content-center" *ngIf="(isLoggedIn$ | async) === true">
+        <a href="#" class="mr-3">{{userEmail}}</a>
+        <button class="btn btn-sm btn-info bg-secondary-theme text-theme-primary" (click)="logOut()">Logout</button>
+    </div>
 </header>
 
