ad two new futures for backend before amendments

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-4 mb-5">
+        <div class="col-md-6 mb-5">
             <div class="card shadow-effect" routerLink="/category">
                 <div class="card-body text-center bg-secondary-theme">
                     <h1 class="mt-3 text-theme-primary"><img src="assets/icons/list.png" alt=""></h1>
@@ -9,12 +9,30 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-5">
+        <div class="col-md-6 mb-5">
             <div class="card shadow-effect" routerLink="/posts">
                 <div class="card-body text-center bg-secondary-theme">
                     <h1 class="mt-3 text-theme-primary"><img src="assets/icons/list-on-window.png" alt=""></h1>
                     <h2 class="text-theme-primary">Posts</h2>
                     <p>Mange Your Posts Details Here</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 mb-5">
+            <div class="card shadow-effect" routerLink="/subscribers">
+                <div class="card-body text-center bg-secondary-theme">
+                    <h1 class="mt-3 text-theme-primary"><img src="assets/icons/subscribe.png" alt=""></h1>
+                    <h2 class="text-theme-primary">Subscribers</h2>
+                    <p>Mange Your Subscribers Here</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 mb-5">
+            <div class="card shadow-effect" routerLink="/comments">
+                <div class="card-body text-center bg-secondary-theme">
+                    <h1 class="mt-3 text-theme-primary"><img src="assets/icons/comment.png" alt=""></h1>
+                    <h2 class="text-theme-primary">Comments</h2>
+                    <p>Mange Comments Here</p>
                 </div>
             </div>
         </div>
